# cinema-devweb2-django

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
cinema/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_filme.py  0005_alter_compra_status_itenscompra.py
core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  diretor.py  filme.py  produtora.py
