[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["jose-rodrigo-de-oliveira-silvaa"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
djangorestframework = "^3.13.1"
flake8 = "^4.0.1"
black = "^22.1.0"
djangorestframework-simplejwt = "^5.0.0"
drf-spectacular = "^0.21.2"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
